@@ -107,6 +107,11 @@
         <td>The contents of <code><var>Foobar</var>:</code> header line(s)
         in the request sent to the server.</td></tr>
 
+    <tr><td><code>%k</code></td>
+        <td>Number of requests handled on this connection.  Interesting if
+          <directive module="core">KeepAlive</directive> is being used;
+          otherwise this is always 0.</td></tr>
+
     <tr><td><code>%l</code></td>
         <td>Remote logname (from identd, if supplied). This will return a
         dash unless <module>mod_ident</module> is present and <directive
